--- a/.github/workflows/write-json.yml
+++ b/.github/workflows/write-json.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Copy file to gh-pages branch
         run: |
-          cp data.json gh-pages/
+          cp demofile.json gh-pages/
 
       - name: Commit and push to gh-pages branch
         run: |
