--- a/.github/workflows/write-json.yml
+++ b/.github/workflows/write-json.yml
@@ -41,6 +41,6 @@ jobs:
           cd gh-pages
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add data.json
+          git add demofile.json
           git commit -m "Update data.json"
           git push origin gh-pages
