--- a/.github/workflows/write-json.yml
+++ b/.github/workflows/write-json.yml
@@ -12,6 +12,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: main
+          
+      - name: Use my secret
+        run: echo "My secret is ${{ secrets.ACCESS_TOKEN }}"
 
       - name: Set up Python
         uses: actions/setup-python@v2
