--- a/.github/workflows/write-json.yml
+++ b/.github/workflows/write-json.yml
@@ -6,16 +6,16 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
+    env:
+      ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      REPO: ${{ secrets.REPO }}
+      USER: ${{ secrets.USER }}
+      
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v2
         with:
           ref: main
-          
-      - name: Use my secret
-        run: echo "My secret is ${{ secrets.ACCESS_TOKEN }}"
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
