--- a/.github/workflows/write-json.yml
+++ b/.github/workflows/write-json.yml
@@ -44,6 +44,6 @@ jobs:
       - name: Commit and Push Changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.ACCESS_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           directory: .
